force-app/main/default/objects/Approval_History__c/fields/Advance__c.field-meta.xml
<CustomField>
    <fullName>Advance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Advance</label>
    <referenceTo>Advance__c</referenceTo>
    <relationshipLabel>Approval Histories</relationshipLabel>
    <relationshipName>Approval_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>