force-app/main/default/objects/Approval_History__c/fields/Advance_Fee_Percent__c.field-meta.xml
<CustomField>
    <fullName>Advance_Fee_Percent__c</fullName>
    <description>Advance Fee % at the time of submission or approval</description>
    <inlineHelpText>Advance Fee % at the time of submission or approval</inlineHelpText>
    <label>Advance Fee %</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>