force-app/main/default/objects/Approval_History__c/fields/Amortization_Status__c.field-meta.xml
<CustomField>
    <fullName>Amortization_Status__c</fullName>
    <label>Is this Loan Amortized or Interest Only?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan Amortized</fullName>
            </value>
            <value>
                <fullName>Interest Only</fullName>
            </value>
            <value>
                <fullName>Partial I/O Term</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>