force-app/main/default/objects/Approval_History__c/fields/Amortization_Term__c.field-meta.xml
<CustomField>
    <fullName>Amortization_Term__c</fullName>
    <label>Amortization Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>