force-app/main/default/objects/Approval_History__c/fields/Amortization_Term_Comment__c.field-meta.xml
<CustomField>
    <fullName>Amortization_Term_Comment__c</fullName>
    <label>Amortization Term Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>