force-app/main/default/objects/Approval_History__c/fields/Approval_Type__c.field-meta.xml
<CustomField>
    <fullName>Approval_Type__c</fullName>
    <inlineHelpText>The Type of Approval Process</inlineHelpText>
    <label>Approval Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pricing Review</fullName>
            </value>
            <value>
                <fullName>Submission into UW</fullName>
            </value>
            <value>
                <fullName>GLC Approval</fullName>
            </value>
            <value>
                <fullName>Term Sheet Approval</fullName>
            </value>
            <value>
                <fullName>Approved By GLC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>