force-app/main/default/objects/Approval_History__c/fields/Batch_Approval__c.field-meta.xml
<CustomField>
    <fullName>Batch_Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Batch Approval</label>
    <referenceTo>Batch_Approval__c</referenceTo>
    <relationshipLabel>Approval Histories</relationshipLabel>
    <relationshipName>Approval_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>