force-app/main/default/objects/Approval_History__c/fields/Broker_Fee__c.field-meta.xml
<CustomField>
    <fullName>Broker_Fee__c</fullName>
    <label>Broker Fee %</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>