force-app/main/default/objects/Approval_History__c/fields/Broker_YSP__c.field-meta.xml
<CustomField>
    <fullName>Broker_YSP__c</fullName>
    <label>Broker YSP %</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>