force-app/main/default/objects/Approval_History__c/fields/Broker_YSP_Comment__c.field-meta.xml
<CustomField>
    <fullName>Broker_YSP_Comment__c</fullName>
    <label>Broker YSP % Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>