force-app/main/default/objects/Approval_History__c/fields/Cash_Management_Comment__c.field-meta.xml
<CustomField>
    <fullName>Cash_Management_Comment__c</fullName>
    <label>Cash Management	Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>