force-app/main/default/objects/Approval_History__c/fields/Clear_to_Lock__c.field-meta.xml
<CustomField>
    <fullName>Clear_to_Lock__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Clear to Lock</label>
    <type>Checkbox</type>
</CustomField>