force-app/main/default/objects/Approval_History__c/fields/Clear_to_Lock_Comment__c.field-meta.xml
<CustomField>
    <fullName>Clear_to_Lock_Comment__c</fullName>
    <label>Clear to Lock Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>