force-app/main/default/objects/Approval_History__c/fields/Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address__c</fullName>
    <label>Contact Address</label>
    <type>TextArea</type>
</CustomField>