force-app/main/default/objects/Approval_History__c/fields/Contact_Address_Comment__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address_Comment__c</fullName>
    <label>Contact Address Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>