force-app/main/default/objects/Approval_History__c/fields/Contact_Email_Comment__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_Comment__c</fullName>
    <label>Contact Email Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>