force-app/main/default/objects/Approval_History__c/fields/Current_Loan_Amount_Comment__c.field-meta.xml
<CustomField>
    <fullName>Current_Loan_Amount_Comment__c</fullName>
    <label>Current Loan Amount Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>