force-app/main/default/objects/Approval_History__c/fields/Date_Acted__c.field-meta.xml
<CustomField>
    <fullName>Date_Acted__c</fullName>
    <label>Date Acted</label>
    <type>DateTime</type>
</CustomField>