force-app/main/default/objects/Approval_History__c/fields/Days_in_Approval__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Approval__c</fullName>
    <formula>Date_Acted__c - CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Approval</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>