force-app/main/default/objects/Approval_History__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Approval Histories</relationshipLabel>
    <relationshipName>Approval_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>