force-app/main/default/objects/Approval_History__c/fields/Deal_Stage_At_Time_of_Submission__c.field-meta.xml
<CustomField>
    <fullName>Deal_Stage_At_Time_of_Submission__c</fullName>
    <description>This was the Stage of the Deal at the time of this Approval Submission</description>
    <inlineHelpText>This was the Stage of the Deal at the time of this Approval Submission</inlineHelpText>
    <label>Deal Stage At Time of Submission</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Initial Review</fullName>
            </value>
            <value>
                <fullName>Data Tape Received</fullName>
            </value>
            <value>
                <fullName>Term Sheet Issued</fullName>
            </value>
            <value>
                <fullName>Term Sheet Signed/Deposit Collected</fullName>
            </value>
            <value>
                <fullName>Loan Processing</fullName>
            </value>
            <value>
                <fullName>Underwriting</fullName>
            </value>
            <value>
                <fullName>Approved By Committee</fullName>
            </value>
            <value>
                <fullName>Closed Won</fullName>
            </value>
            <value>
                <fullName>UW Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>