force-app/main/default/objects/Approval_History__c/fields/Deposit_Amount_Comment__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Amount_Comment__c</fullName>
    <label>Deposit Amount Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>