force-app/main/default/objects/Approval_History__c/fields/Final_Spread_Comment__c.field-meta.xml
<CustomField>
    <fullName>Final_Spread_Comment__c</fullName>
    <label>Final Spread Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>