force-app/main/default/objects/Approval_History__c/fields/Floor_Percent__c.field-meta.xml
<CustomField>
    <fullName>Floor_Percent__c</fullName>
    <label>Floor %</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>