force-app/main/default/objects/Approval_History__c/fields/Foreign_National_Comment__c.field-meta.xml
<CustomField>
    <fullName>Foreign_National_Comment__c</fullName>
    <label>Foreign National Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>