force-app/main/default/objects/Approval_History__c/fields/Foreign_National_picklist__c.field-meta.xml
<CustomField>
    <fullName>Foreign_National_picklist__c</fullName>
    <description>Foreign National picklist field from the deal, used in confirmation of terms.</description>
    <label>Foreign National</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>