force-app/main/default/objects/Approval_History__c/fields/Holdback_Multiplier_Comment__c.field-meta.xml
<CustomField>
    <fullName>Holdback_Multiplier_Comment__c</fullName>
    <label>Holdback Multiplier	Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>