force-app/main/default/objects/Approval_History__c/fields/Hours_in_Approval__c.field-meta.xml
<CustomField>
    <fullName>Hours_in_Approval__c</fullName>
    <formula>IF(Status__c = &quot;Approved&quot; || Status__c = &quot;Recalled&quot; || Status__c = &quot;Rejected&quot;  ,(Date_Acted__c - CreatedDate)*24,(NOW() - CreatedDate )*24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours in Approval</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>