force-app/main/default/objects/Approval_History__c/fields/Insurance_complete__c.field-meta.xml
<CustomField>
    <fullName>Insurance_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance complete</label>
    <type>Checkbox</type>
</CustomField>