force-app/main/default/objects/Approval_History__c/fields/Insurance_complete_Comment__c.field-meta.xml
<CustomField>
    <fullName>Insurance_complete_Comment__c</fullName>
    <label>Insurance complete Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>