force-app/main/default/objects/Approval_History__c/fields/Lease_and_PP_review_complete__c.field-meta.xml
<CustomField>
    <fullName>Lease_and_PP_review_complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lease and PP review complete?</label>
    <type>Checkbox</type>
</CustomField>