force-app/main/default/objects/Approval_History__c/fields/Lease_and_PP_review_complete_Comment__c.field-meta.xml
<CustomField>
    <fullName>Lease_and_PP_review_complete_Comment__c</fullName>
    <label>Lease and PP review complete Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>