force-app/main/default/objects/Approval_History__c/fields/Model_up_to_date__c.field-meta.xml
<CustomField>
    <fullName>Model_up_to_date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Model up to date</label>
    <type>Checkbox</type>
</CustomField>