force-app/main/default/objects/Approval_History__c/fields/Model_up_to_date_Comment__c.field-meta.xml
<CustomField>
    <fullName>Model_up_to_date_Comment__c</fullName>
    <label>Model up to date Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>