force-app/main/default/objects/Approval_History__c/fields/Origination_Fee__c.field-meta.xml
<CustomField>
    <fullName>Origination_Fee__c</fullName>
    <description>The Origination Fee % at the time of submission or approval</description>
    <inlineHelpText>The Origination Fee % at the time of submission or approval</inlineHelpText>
    <label>Origination Fee %</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>