force-app/main/default/objects/Approval_History__c/fields/Origination_Fee_Comment__c.field-meta.xml
<CustomField>
    <fullName>Origination_Fee_Comment__c</fullName>
    <label>Origination Fee % Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>