force-app/main/default/objects/Approval_History__c/fields/Process_Instance_Id__c.field-meta.xml
<CustomField>
    <fullName>Process_Instance_Id__c</fullName>
    <label>Process Instance Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>