force-app/main/default/objects/Approval_History__c/fields/Property_Management__c.field-meta.xml
<CustomField>
    <fullName>Property_Management__c</fullName>
    <label>Property Management</label>
    <length>255</length>
    <type>Text</type>
</CustomField>