force-app/main/default/objects/Approval_History__c/fields/Property_Management_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Property_Management_Adjustment__c</fullName>
    <label>Property Management Adjustment</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>