force-app/main/default/objects/Approval_History__c/fields/Property_Management_Comment__c.field-meta.xml
<CustomField>
    <fullName>Property_Management_Comment__c</fullName>
    <label>Property Management Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>