force-app/main/default/objects/Approval_History__c/fields/Recourse__c.field-meta.xml
<CustomField>
    <fullName>Recourse__c</fullName>
    <label>Recourse</label>
    <length>255</length>
    <type>Text</type>
</CustomField>