force-app/main/default/objects/Approval_History__c/fields/Recourse_Comment__c.field-meta.xml
<CustomField>
    <fullName>Recourse_Comment__c</fullName>
    <label>Recourse Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>