force-app/main/default/objects/Approval_History__c/fields/Rejection_Link__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Link__c</fullName>
    <formula>HYPERLINK(&quot;/one/one.app#/alohaRedirect/apex/IcRejectionLinkVf?id=&quot; +  Deal__c, &quot;REJECT&quot;, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rejection Link</label>
    <type>Text</type>
</CustomField>