force-app/main/default/objects/Approval_History__c/fields/Requested_Exit_Fee__c.field-meta.xml
<CustomField>
    <fullName>Requested_Exit_Fee__c</fullName>
    <inlineHelpText>Exit Fee at the time of Approval Request</inlineHelpText>
    <label>Requested Exit Fee</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>