force-app/main/default/objects/Approval_History__c/fields/Requested_Loan_Size__c.field-meta.xml
<CustomField>
    <fullName>Requested_Loan_Size__c</fullName>
    <label>Requested Loan Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>