force-app/main/default/objects/Approval_History__c/fields/Spread__c.field-meta.xml
<CustomField>
    <fullName>Spread__c</fullName>
    <description>Spread at the time of submission or approval</description>
    <inlineHelpText>Spread at the time of submission or approval</inlineHelpText>
    <label>Spread</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>