force-app/main/default/objects/Approval_History__c/fields/Step_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Step_Item_Id__c</fullName>
    <label>Step Item Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>