force-app/main/default/objects/Approval_History__c/fields/Swap_Rate__c.field-meta.xml
<CustomField>
    <fullName>Swap_Rate__c</fullName>
    <description>Swap/Treasury Rate at the time of submission or approval</description>
    <inlineHelpText>Swap/Treasury Rate at the time of submission or approval</inlineHelpText>
    <label>Swap/Treasury Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>