force-app/main/default/objects/Approval_History__c/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>Term at the time of the approval action</description>
    <inlineHelpText>Term at the time of the approval action</inlineHelpText>
    <label>Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Term</valueSetName>
    </valueSet>
</CustomField>