force-app/main/default/objects/Approval_History__c/fields/Term_Loan_Type__c.field-meta.xml
<CustomField>
    <fullName>Term_Loan_Type__c</fullName>
    <label>Term Loan Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>