force-app/main/default/objects/Approval_History__c/fields/Term_Loan_Type_Comment__c.field-meta.xml
<CustomField>
    <fullName>Term_Loan_Type_Comment__c</fullName>
    <label>Term Loan Type Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>