force-app/main/default/objects/Approval_History__c/fields/Time_in_Approval__c.field-meta.xml
<CustomField>
    <fullName>Time_in_Approval__c</fullName>
    <description>Time since Pricing Approval Submission</description>
    <formula>IF(Status__c != &apos;Approved&apos;,
      TEXT( Time_In_Approval_Initial__c - 1 ) &amp; &quot; days &quot;
      &amp; TEXT( ABS(FLOOR( MOD( (NOW() - CreatedDate) * 24, 24 ) ) )) &amp; &quot; hours &quot;
      &amp; TEXT( ABS (ROUND( MOD( (NOW() - CreatedDate) * 24 * 60, 60 ), 0 )) ) &amp; &quot; minutes&quot;,
  
      TEXT( Time_In_Approval_Completed__c -1 ) &amp; &quot; days &quot;
      &amp; TEXT( ABS(FLOOR( MOD( (Date_Acted__c - CreatedDate) * 24, 24 ) )) ) &amp; &quot; hours &quot;
      &amp; TEXT( ABS(ROUND( MOD( (Date_Acted__c - CreatedDate) * 24 * 60, 60 ), 0 ) )) &amp; &quot; minutes&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time in Approval</label>
    <type>Text</type>
</CustomField>