force-app/main/default/objects/Approval_History__c/fields/Total_Annual_Cap_Ex_Comment__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Cap_Ex_Comment__c</fullName>
    <label>Total Annual Cap Ex Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>