force-app/main/default/objects/Approval_History__c/fields/Tracking_Status__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Status__c</fullName>
    <label>Tracking Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>