force-app/main/default/objects/Approval_History__c/fields/Valuation_Invoice_uploaded_to_SF__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Invoice_uploaded_to_SF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valuation Invoice uploaded to SF?</label>
    <type>Checkbox</type>
</CustomField>