force-app/main/default/objects/Approval_History__c/fields/Valuation_Invoice_uploaded_to_SF_Comment__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Invoice_uploaded_to_SF_Comment__c</fullName>
    <label>Valuation Invoice uploaded to SF Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>