force-app/main/default/objects/Approval_History__c/fields/Valuations_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Valuations_Invoices__c</fullName>
    <label>Valuations Invoices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>