force-app/main/default/objects/Approval_History__c/fields/Valuations_Invoices_Comment__c.field-meta.xml
<CustomField>
    <fullName>Valuations_Invoices_Comment__c</fullName>
    <label>Valuations Invoices Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>